src/grammar/SQLGrammarParser.java
// Generated from grammar/SQLGrammar.g4 by ANTLR 4.7.2
package grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLGrammarParser extends Parser {

	static {
		RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache
		= new PredictionContextCache();
	public static final int T__0 = 1, CREATE = 2, DATABASE = 3, DATABASES = 4, ALTER = 5, DROP = 6, SHOW = 7, USE = 8,
		CONSTRAINT = 9, TABLE = 10, TABLES = 11, PRIMARY = 12, FOREIGN = 13, KEY = 14, REFERENCES = 15,
		CHECK = 16, AND = 17, OR = 18, NOT = 19, RENAME = 20, TO = 21, ADD = 22, COLUMN = 23,
		COLUMNS = 24, FROM = 25, INSERT = 26, INTO = 27, VALUES = 28, UPDATE = 29, SET = 30,
		WHERE = 31, DELETE = 32, SELECT = 33, ORDER = 34, BY = 35, ASC = 36, DESC = 37, NULL = 38,
		ECHO = 39, ENABLED = 40, DISABLED = 41, END_LINE = 42, DOT_OP = 43, SUBTRACT_OP = 44,
		SUM_OP = 45, TIMES_OP = 46, DIV_OP = 47, MOD_OP = 48, RIGHT_PAR = 49, LEFT_PAR = 50,
		REL_OP = 51, EQUALITY_OP = 52, INEQUALITY_OP = 53, INT = 54, FLOAT = 55, DATE = 56,
		CHAR = 57, ID = 58, NUM = 59, STRING = 60, REAL = 61, WS = 62, COMMENT = 63;
	public static final int RULE_program = 0, RULE_statement = 1, RULE_echo = 2, RULE_createDatabase = 3,
		RULE_alterDatabase = 4, RULE_dropDatabase = 5, RULE_showDatabases = 6,
		RULE_useDatabase = 7, RULE_columnType = 8, RULE_idList = 9, RULE_constraintType = 10,
		RULE_constraintList = 11, RULE_createTable = 12, RULE_action = 13, RULE_alterTable = 14,
		RULE_dropTable = 15, RULE_showTables = 16, RULE_showColumns = 17, RULE_valueList = 18,
		RULE_idValue = 19, RULE_idValueList = 20, RULE_insertInto = 21, RULE_update = 22,
		RULE_deleteFrom = 23, RULE_orderType = 24, RULE_orderExp = 25, RULE_orderList = 26,
		RULE_select = 27, RULE_location = 28, RULE_expression = 29, RULE_eq_op = 30,
		RULE_literal = 31, RULE_int_literal = 32, RULE_string_literal = 33, RULE_real_literal = 34,
		RULE_null_literal = 35;

	private static String[] makeRuleNames() {
		return new String[]{
			"program", "statement", "echo", "createDatabase", "alterDatabase", "dropDatabase",
			"showDatabases", "useDatabase", "columnType", "idList", "constraintType",
			"constraintList", "createTable", "action", "alterTable", "dropTable",
			"showTables", "showColumns", "valueList", "idValue", "idValueList", "insertInto",
			"update", "deleteFrom", "orderType", "orderExp", "orderList", "select",
			"location", "expression", "eq_op", "literal", "int_literal", "string_literal",
			"real_literal", "null_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
			null, "','", null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, "';'", "'.'", "'-'", "'+'", "'*'",
			"'/'", "'%'", "')'", "'('", null, "'='", "'<>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[]{
			null, null, "CREATE", "DATABASE", "DATABASES", "ALTER", "DROP", "SHOW",
			"USE", "CONSTRAINT", "TABLE", "TABLES", "PRIMARY", "FOREIGN", "KEY",
			"REFERENCES", "CHECK", "AND", "OR", "NOT", "RENAME", "TO", "ADD", "COLUMN",
			"COLUMNS", "FROM", "INSERT", "INTO", "VALUES", "UPDATE", "SET", "WHERE",
			"DELETE", "SELECT", "ORDER", "BY", "ASC", "DESC", "NULL", "ECHO", "ENABLED",
			"DISABLED", "END_LINE", "DOT_OP", "SUBTRACT_OP", "SUM_OP", "TIMES_OP",
			"DIV_OP", "MOD_OP", "RIGHT_PAR", "LEFT_PAR", "REL_OP", "EQUALITY_OP",
			"INEQUALITY_OP", "INT", "FLOAT", "DATE", "CHAR", "ID", "NUM", "STRING",
			"REAL", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "SQLGrammar.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public SQLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {

		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}

		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class, i);
		}

		public List<TerminalNode> END_LINE() {
			return getTokens(SQLGrammarParser.END_LINE);
		}

		public TerminalNode END_LINE(int i) {
			return getToken(SQLGrammarParser.END_LINE, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitProgram(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(72);
				statement();
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(73);
								match(END_LINE);
								setState(74);
								statement();
							}
						}
					}
					setState(79);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == END_LINE) {
					{
						setState(80);
						match(END_LINE);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {

		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class, 0);
		}

		public AlterDatabaseContext alterDatabase() {
			return getRuleContext(AlterDatabaseContext.class, 0);
		}

		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class, 0);
		}

		public ShowDatabasesContext showDatabases() {
			return getRuleContext(ShowDatabasesContext.class, 0);
		}

		public UseDatabaseContext useDatabase() {
			return getRuleContext(UseDatabaseContext.class, 0);
		}

		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class, 0);
		}

		public AlterTableContext alterTable() {
			return getRuleContext(AlterTableContext.class, 0);
		}

		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class, 0);
		}

		public ShowTablesContext showTables() {
			return getRuleContext(ShowTablesContext.class, 0);
		}

		public ShowColumnsContext showColumns() {
			return getRuleContext(ShowColumnsContext.class, 0);
		}

		public InsertIntoContext insertInto() {
			return getRuleContext(InsertIntoContext.class, 0);
		}

		public UpdateContext update() {
			return getRuleContext(UpdateContext.class, 0);
		}

		public DeleteFromContext deleteFrom() {
			return getRuleContext(DeleteFromContext.class, 0);
		}

		public SelectContext select() {
			return getRuleContext(SelectContext.class, 0);
		}

		public EchoContext echo() {
			return getRuleContext(EchoContext.class, 0);
		}

		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_statement;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitStatement(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
					 {
						setState(83);
						createDatabase();
					}
					break;
				case 2:
					enterOuterAlt(_localctx, 2);
					 {
						setState(84);
						alterDatabase();
					}
					break;
				case 3:
					enterOuterAlt(_localctx, 3);
					 {
						setState(85);
						dropDatabase();
					}
					break;
				case 4:
					enterOuterAlt(_localctx, 4);
					 {
						setState(86);
						showDatabases();
					}
					break;
				case 5:
					enterOuterAlt(_localctx, 5);
					 {
						setState(87);
						useDatabase();
					}
					break;
				case 6:
					enterOuterAlt(_localctx, 6);
					 {
						setState(88);
						createTable();
					}
					break;
				case 7:
					enterOuterAlt(_localctx, 7);
					 {
						setState(89);
						alterTable();
					}
					break;
				case 8:
					enterOuterAlt(_localctx, 8);
					 {
						setState(90);
						dropTable();
					}
					break;
				case 9:
					enterOuterAlt(_localctx, 9);
					 {
						setState(91);
						showTables();
					}
					break;
				case 10:
					enterOuterAlt(_localctx, 10);
					 {
						setState(92);
						showColumns();
					}
					break;
				case 11:
					enterOuterAlt(_localctx, 11);
					 {
						setState(93);
						insertInto();
					}
					break;
				case 12:
					enterOuterAlt(_localctx, 12);
					 {
						setState(94);
						update();
					}
					break;
				case 13:
					enterOuterAlt(_localctx, 13);
					 {
						setState(95);
						deleteFrom();
					}
					break;
				case 14:
					enterOuterAlt(_localctx, 14);
					 {
						setState(96);
						select();
					}
					break;
				case 15:
					enterOuterAlt(_localctx, 15);
					 {
						setState(97);
						echo();
					}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EchoContext extends ParserRuleContext {

		public TerminalNode ECHO() {
			return getToken(SQLGrammarParser.ECHO, 0);
		}

		public TerminalNode ENABLED() {
			return getToken(SQLGrammarParser.ENABLED, 0);
		}

		public TerminalNode DISABLED() {
			return getToken(SQLGrammarParser.DISABLED, 0);
		}

		public EchoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_echo;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitEcho(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final EchoContext echo() throws RecognitionException {
		EchoContext _localctx = new EchoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_echo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(100);
				match(ECHO);
				setState(101);
				_la = _input.LA(1);
				if (!(_la == ENABLED || _la == DISABLED)) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF) {
						matchedEOF = true;
					}
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDatabaseContext extends ParserRuleContext {

		public TerminalNode CREATE() {
			return getToken(SQLGrammarParser.CREATE, 0);
		}

		public TerminalNode DATABASE() {
			return getToken(SQLGrammarParser.DATABASE, 0);
		}

		public TerminalNode ID() {
			return getToken(SQLGrammarParser.ID, 0);
		}

		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_createDatabase;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitCreateDatabase(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(103);
				match(CREATE);
				setState(104);
				match(DATABASE);
				setState(105);
				match(ID);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterDatabaseContext extends ParserRuleContext {

		public TerminalNode ALTER() {
			return getToken(SQLGrammarParser.ALTER, 0);
		}

		public TerminalNode DATABASE() {
			return getToken(SQLGrammarParser.DATABASE, 0);
		}

		public List<TerminalNode> ID() {
			return getTokens(SQLGrammarParser.ID);
		}

		public TerminalNode ID(int i) {
			return getToken(SQLGrammarParser.ID, i);
		}

		public TerminalNode RENAME() {
			return getToken(SQLGrammarParser.RENAME, 0);
		}

		public TerminalNode TO() {
			return getToken(SQLGrammarParser.TO, 0);
		}

		public AlterDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_alterDatabase;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitAlterDatabase(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final AlterDatabaseContext alterDatabase() throws RecognitionException {
		AlterDatabaseContext _localctx = new AlterDatabaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_alterDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(107);
				match(ALTER);
				setState(108);
				match(DATABASE);
				setState(109);
				match(ID);
				setState(110);
				match(RENAME);
				setState(111);
				match(TO);
				setState(112);
				match(ID);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropDatabaseContext extends ParserRuleContext {

		public TerminalNode DROP() {
			return getToken(SQLGrammarParser.DROP, 0);
		}

		public TerminalNode DATABASE() {
			return getToken(SQLGrammarParser.DATABASE, 0);
		}

		public TerminalNode ID() {
			return getToken(SQLGrammarParser.ID, 0);
		}

		public DropDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_dropDatabase;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitDropDatabase(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final DropDatabaseContext dropDatabase() throws RecognitionException {
		DropDatabaseContext _localctx = new DropDatabaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dropDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(114);
				match(DROP);
				setState(115);
				match(DATABASE);
				setState(116);
				match(ID);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowDatabasesContext extends ParserRuleContext {

		public TerminalNode SHOW() {
			return getToken(SQLGrammarParser.SHOW, 0);
		}

		public TerminalNode DATABASES() {
			return getToken(SQLGrammarParser.DATABASES, 0);
		}

		public ShowDatabasesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_showDatabases;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitShowDatabases(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final ShowDatabasesContext showDatabases() throws RecognitionException {
		ShowDatabasesContext _localctx = new ShowDatabasesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_showDatabases);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(118);
				match(SHOW);
				setState(119);
				match(DATABASES);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseDatabaseContext extends ParserRuleContext {

		public TerminalNode USE() {
			return getToken(SQLGrammarParser.USE, 0);
		}

		public TerminalNode DATABASE() {
			return getToken(SQLGrammarParser.DATABASE, 0);
		}

		public TerminalNode ID() {
			return getToken(SQLGrammarParser.ID, 0);
		}

		public UseDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_useDatabase;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitUseDatabase(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final UseDatabaseContext useDatabase() throws RecognitionException {
		UseDatabaseContext _localctx = new UseDatabaseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_useDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(121);
				match(USE);
				setState(122);
				match(DATABASE);
				setState(123);
				match(ID);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnTypeContext extends ParserRuleContext {

		public TerminalNode INT() {
			return getToken(SQLGrammarParser.INT, 0);
		}

		public TerminalNode FLOAT() {
			return getToken(SQLGrammarParser.FLOAT, 0);
		}

		public TerminalNode DATE() {
			return getToken(SQLGrammarParser.DATE, 0);
		}

		public TerminalNode CHAR() {
			return getToken(SQLGrammarParser.CHAR, 0);
		}

		public TerminalNode LEFT_PAR() {
			return getToken(SQLGrammarParser.LEFT_PAR, 0);
		}

		public Int_literalContext int_literal() {
			return getRuleContext(Int_literalContext.class, 0);
		}

		public TerminalNode RIGHT_PAR() {
			return getToken(SQLGrammarParser.RIGHT_PAR, 0);
		}

		public ColumnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_columnType;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitColumnType(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final ColumnTypeContext columnType() throws RecognitionException {
		ColumnTypeContext _localctx = new ColumnTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_columnType);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case INT:
					enterOuterAlt(_localctx, 1);
					 {
						setState(125);
						match(INT);
					}
					break;
				case FLOAT:
					enterOuterAlt(_localctx, 2);
					 {
						setState(126);
						match(FLOAT);
					}
					break;
				case DATE:
					enterOuterAlt(_localctx, 3);
					 {
						setState(127);
						match(DATE);
					}
					break;
				case CHAR:
					enterOuterAlt(_localctx, 4);
					 {
						setState(128);
						match(CHAR);
						setState(129);
						match(LEFT_PAR);
						setState(130);
						int_literal();
						setState(131);
						match(RIGHT_PAR);
					}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdListContext extends ParserRuleContext {

		public List<TerminalNode> ID() {
			return getTokens(SQLGrammarParser.ID);
		}

		public TerminalNode ID(int i) {
			return getToken(SQLGrammarParser.ID, i);
		}

		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_idList;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof SQLGrammarVisitor) {
				return ((SQLGrammarVisitor<? extends T>) visitor).visitIdList(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_idList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				{
					setState(135);
					match(ID);
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__0) {
					{
						{
							setState(136);
							match(T__0);
							setState(137);
							match(ID);
						}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintTypeContext extends ParserRuleContext {

		public List<TerminalNode> ID() {
			return getTokens(SQLGrammarParser.ID);
		}

		public TerminalNode ID(int i) {
			return getToken(SQLGrammarParser.ID, i);
		}

		public TerminalNode PRIMARY() {
			return getToken(SQLGrammarParser.PRIMARY, 0);
		}

		public TerminalNode KEY() {
			return getToken(SQLGrammarParser.KEY, 0);
		}

		public List<TerminalNode> LEFT_PAR() {
			return getTokens(SQLGrammarParser.LEFT_PAR);
		}
